pkg/tests/ossm-federation/testdata/traffic-splitting/east-mesh/importedserviceset.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: federation.maistra.io/v1
kind: ImportedServiceSet
metadata:
  name: west-mesh
  namespace: east-mesh-system
spec:
  importRules:
    - type: NameSelector
      # Set to true to aggregate remote endpoint with local services.
      # When true, services will be imported as <name>.east-mesh-bookinfo.svc.cluster.local
      importAsLocal: false
      nameSelector:
        namespace: bookinfo
        alias:
          # services will be imported as <name>.east-mesh-bookinfo.svc.west-mesh-imports.local
          namespace: east-mesh-bookinfo
