pkg/tests/ossm-federation/testdata/traffic-splitting/east-mesh/mongodb-remote-virtualservice.yaml
# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mongodb-remote
  namespace: east-mesh-bookinfo
spec:
  hosts:
    - mongodb.east-mesh-bookinfo.svc.cluster.local
  tcp:
    - route:
        - destination:
            host: mongodb.east-mesh-bookinfo.svc.west-mesh-imports.local
