pkg/tests/ossm-federation/testdata/traffic-splitting/east-mesh/mongodb-service.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This is required, as apparently a VirtualService matching 
# mongodb.east-mesh-bookinfo.svc.cluster.local does not create DNS entry for routing
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: east-mesh-bookinfo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    name: mongo
