pkg/tests/ossm-federation/testdata/traffic-splitting/east-mesh/ratings-split-virtualservice.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings-split
  namespace: east-mesh-bookinfo
spec:
  hosts:
    - ratings.east-mesh-bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: ratings.east-mesh-bookinfo.svc.west-mesh-imports.local
          weight: 50
        - destination:
            host: ratings.east-mesh-bookinfo.svc.cluster.local
            subset: v2
          weight: 50
