pkg/tests/ossm-federation/testdata/traffic-splitting/east-mesh/smmr.yaml
apiVersion: maistra.io/v1
kind: ServiceMeshMemberRoll
metadata:
  name: default
  namespace: east-mesh-system
spec:
  members:
  - east-mesh-bookinfo
